objects/CRM_Borrowing_Power_Other__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Credit_Card_Multiplier__c</fullName>
        <label>Credit Card Multiplier</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_DSR__c</fullName>
        <label>DSR</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Max_Lend__c</fullName>
        <label>Max Lend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mortgage_Debt_Rate__c</fullName>
        <label>Mortgage Debt Rate</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_NSR__c</fullName>
        <label>NSR</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Qualifying_Borrowing_Power__c</fullName>
        <label>Qualifying Borrowing Power</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Qualifying_LVR__c</fullName>
        <label>Qualifying LVR</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Rent_Rate__c</fullName>
        <label>Rent Rate</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Term_Years__c</fullName>
        <label>Term Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Borrowing Power (Other)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_Credit_Card_Multiplier__c</columns>
        <columns>CRM_NSR__c</columns>
        <columns>CRM_Qualifying_Borrowing_Power__c</columns>
        <columns>CRM_Qualifying_LVR__c</columns>
        <columns>CRM_Rent_Rate__c</columns>
        <columns>CRM_Term_Years__c</columns>
        <columns>CRM_Mortgage_Debt_Rate__c</columns>
        <columns>CRM_Max_Lend__c</columns>
        <columns>CRM_DSR__c</columns>
        <columns>CRM_Start_Date__c</columns>
        <columns>CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPOE-{0000}</displayFormat>
        <label>Borrowing Power (Other) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrowing Power</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>